[package]
name = "axum-standardwebhooks"
version = "1.0.0"
edition = "2024"
authors = ["Datong Sun <dndx@idndx.com>"]
description = "Axum extractor that verifies signature for Standard Webhooks"
repository = "https://github.com/dndx/axum-standardwebhooks"
license = "MIT OR Apache-2.0"
keywords = ["standard", "webhooks", "webhook", "axum", "validator"]
categories = [
    "asynchronous",
    "network-programming",
    "web-programming",
]

[dependencies]
standardwebhooks = "1"
http = "1"
axum = "0"
bytes = "1"

[dev-dependencies]
http-body-util = "0"
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0", features = ["macros", "json"] }
tower = { version = "0", default-features = false }
time = "0"
